# metaharness

./: .gitignore  BENCHMARK_RESULTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: experiments.md  getting-started.md  index.md  providers.md
src/metaharness/: cli.py  constitution.py  critique.py  trait_monitor.py
src/metaharness/core/: __init__.py  engine.py
src/metaharness/integrations/coding_tool/: runtime.py
tests/: test_coding_tool_config.py
